# app/internal/modules/catalog/category/controller/http_v1/admin-api/category.go
@@ -135,7 +135,7 @@ func (ht *Category) Store(w http.ResponseWriter, r *http.Request) error {
 
 	item := entity.Category{
 		ID:         ht.getItemID(r),
-		TagVersion: request.Version,
+		TagVersion: request.TagVersion,
 		Caption:    request.Caption,
 	}
 
@@ -188,7 +188,7 @@ func (ht *Category) wrapError(err error, r *http.Request) error {
 	}
 
 	if mrcore.FactoryErrUseCaseEntityVersionInvalid.Is(err) {
-		return mrerr.NewCustomError("version", err)
+		return mrerr.NewCustomError("tagVersion", err)
 	}
 
 	if mrcore.FactoryErrUseCaseSwitchStatusRejected.Is(err) {
