# app/internal/modules/catalog/category/controller/http_v1/admin-api/category_model.go
@@ -10,8 +10,8 @@ type (
 	}
 
 	StoreCategoryRequest struct {
-		Version int32  `json:"version" validate:"required,gte=1"`
-		Caption string `json:"caption" validate:"required,max=128"`
+		TagVersion int32  `json:"tagVersion" validate:"required,gte=1"`
+		Caption    string `json:"caption" validate:"required,max=128"`
 	}
 
 	CategoryListResponse struct {
