# app/internal/modules/catalog/category/entity/admin-api/category.go
@@ -16,7 +16,7 @@ const (
 type (
 	Category struct { // DB: ps_catalog.categories
 		ID         mrtype.KeyInt32 `json:"id"`                                   // category_id
-		TagVersion int32           `json:"version"`                              // tag_version
+		TagVersion int32           `json:"tagVersion"`                           // tag_version
 		CreatedAt  time.Time       `json:"createdAt" sort:"createdAt"`           // created_at
 		UpdatedAt  *time.Time      `json:"updatedAt,omitempty" sort:"updatedAt"` // updated_at
 
