# app/internal/modules/catalog/product/entity/admin-api/product.go
@@ -15,7 +15,7 @@ const (
 type (
 	Product struct { // DB: ps_catalog.products
 		ID         mrtype.KeyInt32 `json:"id"`                                   // product_id
-		TagVersion int32           `json:"version"`                              // tag_version
+		TagVersion int32           `json:"tagVersion"`                           // tag_version
 		CreatedAt  time.Time       `json:"createdAt" sort:"createdAt"`           // created_at
 		UpdatedAt  *time.Time      `json:"updatedAt,omitempty" sort:"updatedAt"` // updated_at
 
