# app/internal/modules/catalog/trademark/controller/http_v1/admin-api/trademark.go
@@ -135,7 +135,7 @@ func (ht *Trademark) Store(w http.ResponseWriter, r *http.Request) error {
 
 	item := entity.Trademark{
 		ID:         ht.getItemID(r),
-		TagVersion: request.Version,
+		TagVersion: request.TagVersion,
 		Caption:    request.Caption,
 	}
 
@@ -188,7 +188,7 @@ func (ht *Trademark) wrapError(err error, r *http.Request) error {
 	}
 
 	if mrcore.FactoryErrUseCaseEntityVersionInvalid.Is(err) {
-		return mrerr.NewCustomError("version", err)
+		return mrerr.NewCustomError("tagVersion", err)
 	}
 
 	if mrcore.FactoryErrUseCaseSwitchStatusRejected.Is(err) {
