# app/internal/modules/catalog/trademark/controller/http_v1/admin-api/trademark_model.go
@@ -10,8 +10,8 @@ type (
 	}
 
 	StoreTrademarkRequest struct {
-		Version int32  `json:"version" validate:"required,gte=1"`
-		Caption string `json:"caption" validate:"required,max=128"`
+		TagVersion int32  `json:"tagVersion" validate:"required,gte=1"`
+		Caption    string `json:"caption" validate:"required,max=128"`
 	}
 
 	TrademarkListResponse struct {
