# app/internal/modules/catalog/trademark/entity/admin-api/trademark.go
@@ -14,7 +14,7 @@ const (
 type (
 	Trademark struct { // DB: ps_catalog.trademarks
 		ID         mrtype.KeyInt32 `json:"id"`                                   // type_id
-		TagVersion int32           `json:"version"`                              // tag_version
+		TagVersion int32           `json:"tagVersion"`                           // tag_version
 		CreatedAt  time.Time       `json:"createdAt" sort:"createdAt"`           // created_at
 		UpdatedAt  *time.Time      `json:"updatedAt,omitempty" sort:"updatedAt"` // updated_at
 
